test/integration/bad/tuples/incomplete4.stan
data {
    ( real , ( complex , complex ) while
